feat: Notifications stream all within kafka